# ML-X_SDK

./: README.md
MLX_API/: CMakeLists.txt
MLX_API/examples/: CMakeLists.txt
MLX_API/examples/python_ml/: test_ml.py
MLX_API/examples/ros2_ml/src/ml/: CMakeLists.txt  README.md  package.xml
MLX_API/examples/ros2_ml/src/ml/include/: soslab_typedef.h
MLX_API/examples/ros2_ml/src/ml/include/ml/: libsoslab_ml.h
MLX_API/examples/ros2_ml/src/ml/launch/: mlx_launch.py  mlx_launch_viz.py
MLX_API/examples/ros2_ml/src/ml/rviz/: config.rviz
MLX_API/examples/ros2_ml/src/ml/src/: ml_node.cpp  mlx_ros2_driver_node.cppdd
MLX_API/examples/ros_ml/src/ml/: CMakeLists.txt  package.xml
MLX_API/examples/ros_ml/src/ml/launch/: ml.launch  ml_second.launch
MLX_API/examples/ros_ml/src/ml/rviz/: demo.rviz
MLX_API/examples/ros_ml/src/ml/src/: main.cpp
MLX_API/examples/test_ml/: CMakeLists.txt  test_ml.cpp
MLX_API/libsoslab_core/: CMakeLists.txt
MLX_API/libsoslab_core/include/core/: ext_interfaces.h  fifo.hpp  logger.h
MLX_API/libsoslab_core/src/: ext_interfaces.cpp  logger.cpp
MLX_API/libsoslab_ml/: CMakeLists.txt
MLX_API/libsoslab_ml/include/ml/: libsoslab_ml.h
MLX_API/libsoslab_ml/src/: libsoslab_ml.cpp
MLX_API/pylibsoslab/: install_library.sh  libsoslab_ml.py  pylibsoslab-1.0-py2.py3-none-any.whl  pylibsoslab_run_step.txt
SOS_Studio/Linux/: sos_studio.sh
SOS_Studio/Linux/deployqt/lib/: libCharLS.so.1  libHalf.so.12  libIex-2_2.so.12  libIlmImf-2_2.so.22  libIlmThread-2_2.so.12  libOpenNI.so.0  libOpenNI2.so.0  libaec.so.0  libarmadillo.so.8  libarpack.so.2  libasn1.so.8  libblas.so.3  libboost_chrono.so.1.65.1  libboost_filesystem.so.1.65.1  libboost_iostreams.so.1.65.1  libcrypto.so.1.1  libdap.so.25  libdapclient.so.6  libdfalt.so.0  libepsilon.so.1  libflann_cpp.so.1.9  libfreexl.so.1  libfyba.so.0  libfygm.so.0  libfyut.so.0  libgdcmCommon.so.2.8  libgdcmDICT.so.2.8  libgdcmDSED.so.2.8  libgdcmIOD.so.2.8  libgdcmMSFF.so.2.8  libgdcmjpeg12.so.2.8  libgdcmjpeg16.so.2.8  libgdcmjpeg8.so.2.8  libgeos_c.so.1  libgeotiff.so.2  libgfortran.so.4  libgif.so.7  libgssapi.so.3  libhcrypto.so.4  libhdf5_serial.so.100  (+106 more)
SOS_Studio/Linux/deployqt/share/applications/: sos_studio.desktop
SOS_Studio/Linux/deployqt/translations/: qt_bg.qm  qt_da.qm  qt_de.qm  qt_es.qm  qt_hu.qm  qt_ja.qm  qt_ko.qm  qt_pl.qm  qt_ru.qm  qt_sk.qm  qt_tr.qm  qt_uk.qm
